feat: add prolong-page

--- a/templates/korobka.html
+++ b/templates/korobka.html
@@ -23,7 +23,8 @@
         <div class="home-1_hero-content">
           <div class="home-1_hero-content-text">
             <h1 class="hero-content__title heading-xxl">
-              Коробочная версия Битрикс24 </h1>
+              Коробочная версия Битрикс24 
+            </h1>
             <p>
               Полный контроль над системой и неограниченные возможности для вашего бизнеса.
             </p>
