feat: add text korobka

--- a/templates/korobka.html
+++ b/templates/korobka.html
@@ -23,7 +23,7 @@
         <div class="home-1_hero-content">
           <div class="home-1_hero-content-text">
             <h1 class="hero-content__title heading-xxl">
-              Коробочная версия Битрикс24 
+              Коробочная версия Битрикс24
             </h1>
             <p>
               Полный контроль над системой и неограниченные возможности для вашего бизнеса.
@@ -48,18 +48,21 @@
 
     <div class="portfolio-details_article-body">
       <div>
-        <h2>Эффективная система мотивации сотрудников</h2>
-        <p><span style="font-weight: bold;">Внедрение BI-инструментов:
-          </span><br>Была внедрена система BI, которая позволила собирать и анализировать данные о работе
-          сотрудников.<br>Были разработаны отчеты, которые отображают конверсию лидов в сделки, эффективность работы
-          каждого сотрудника, объем выполненных работ и т.д.
-          <br><br><span style="font-weight: bold;">Автоматизация системы мотивации:
-          </span><br>Мотивация сотрудников была напрямую связана с их результатами работы.
-          <br>Была введена система поощрения лучших сотрудников.
-          <br><br><span style="font-weight: bold;">Автоматизация работы колл-центра:
-          </span><br>В колл-центре компании используются BI-инструменты для оптимизации работы сотрудников. Сотрудникам
-          колл-центра поставлены KPI (Key Performance Indicators) по конверсии лидов в сделки, количеству звонков в день
-          и другим показателям.<br>
+        <h3><span style="font-weight: bold;">Коробочная версия 1С-Битрикс24</span> — это мощное корпоративное
+          пространство, в котором объединены все процессы компании: коммуникации, управление, автоматизация и CRM.<br>
+          С помощью коробочной версии вы сможете:</h3>
+        <ul class="ms-3" style="list-style: disc;">
+          <li class="pt-2">Создать единое цифровое пространство для общения и совместной работы сотрудников.</li>
+          <li class="pt-2">Настроить бизнес-процессы, автоматизацию продаж и CRM-маркетинг под нужды вашей компании.
+          </li>
+          <li class="pt-2">Работать с документами онлайн, использовать встроенные мессенджеры и проводить видеозвонки
+            без
+            ограничений.</li>
+          <li class="pt-2">Эффективно адаптировать новых сотрудников и управлять проектами.</li>
+        </ul>
+
+        <p>В состав коробки входят операционная система, веб-сервер, база данных, firewall и почтовый сервер —
+          всё необходимое для надёжной, быстрой и защищённой работы корпоративного портала.
         </p>
       </div>
     </div>
@@ -80,71 +83,57 @@
         <div class="col-md-9">
           <div class="section-heading text-center">
             <h2 class="section-heading__title heading-md text-black">
-              Уже используете Битрикс24? <br /> Тогда вам может быть интересно это:
+              Возможности коробочной версии Битрикс24:
             </h2>
           </div>
         </div>
       </div>
-      <div class="row gutter-y-default justify-content-center">
+      <div class="row gutter-y-default justify-content-center" style="align-items: stretch;">
         <div class="col-xl-6 col-lg-6 col-md-10">
-          <a href="service-details.html" class="service-card hvr-fill" data-aos-duration="1000" data-aos="fade-right">
-            <div class="service-card__icon">
-              <img src="{% static '/image/icons/icon-service-1.svg' %}" alt="image alt" class="inline-svg" />
-            </div>
+          <a class="service-card hvr-fill" data-aos-duration="1000" data-aos="fade-right" style="height: 100%;">
             <div class="service-card__body">
               <h3 class="service-card__title">
-                Продление лицензии Битрикс24
+                Установка на ваш сервер или сервер провайдера
               </h3>
               <p>
-                Продлевайте лицензию с Правильными Интеграторами, чтобы продолжать пользоваться привычными
-                преимуществами Битрикс24.
+                Размещайте Битрикс24 на собственных серверах или инфраструктуре провайдера.<br>Вы полностью
+                контролируете
+                данные, безопасность и технические параметры системы.
               </p>
-              <span class="service-card__link btn-link btn-arrow">Подробнее</span>
             </div>
           </a>
         </div>
         <div class="col-xl-6 col-lg-6 col-md-10">
-          <a href="service-details.html" class="service-card hvr-fill" data-aos-duration="1000" data-aos="fade-left">
-            <div class="service-card__icon">
-              <img src="{% static '/image/icons/icon-service-2.svg' %}" alt="image alt" class="inline-svg" />
-            </div>
+          <a class="service-card hvr-fill" data-aos-duration="1000" data-aos="fade-left" style="height: 100%;">
             <div class="service-card__body">
-              <h3 class="service-card__title">Подписка на Маркет Битрикс24</h3>
+              <h3 class="service-card__title">Расширенные возможности и интеграции
+              </h3>
               <p>
-                Расширьте функционал Битрикс24 с подпиской на Маркет. Вы получите дополнительные интеграции с
-                сервисами и увеличение функционала основных инструментов.
+                Коробочная версия предоставляет больше функций, чем облачная: дополнительные модули, гибкие настройки и
+                интеграции с внешними сервисами под задачи вашей компании.
               </p>
-              <span class="service-card__link btn-link btn-arrow">Подробнее</span>
             </div>
           </a>
         </div>
         <div class="col-xl-6 col-lg-6 col-md-10">
-          <a href="service-details.html" class="service-card hvr-fill" data-aos-duration="1000" data-aos="fade-right">
-            <div class="service-card__icon">
-              <img src="{% static '/image/icons/icon-service-3.svg' %}" alt="image alt" class="inline-svg" />
-            </div>
+          <a class="service-card hvr-fill" data-aos-duration="1000" data-aos="fade-right" style="height: 100%;">
             <div class="service-card__body">
-              <h3 class="service-card__title">1C-Битрикс24: Enterprise</h3>
+              <h3 class="service-card__title">Гибкая настройка бизнес-логики и интерфейса</h3>
               <p>
-                Enterprise - решение для крупного бизнеса от Битрикс24.Интеграция в вашу IT-инфраструктуру, для
-                непрерывной работы портала 24/7.
+                Адаптируйте систему под собственные процессы: создавайте уникальные сценарии, изменяйте интерфейс,
+                автоматизируйте работу отделов и внедряйте индивидуальные решения.
               </p>
-              <span class="service-card__link btn-link btn-arrow">Подробнее</span>
             </div>
           </a>
         </div>
         <div class="col-xl-6 col-lg-6 col-md-10">
-          <a href="service-details.html" class="service-card hvr-fill" data-aos-duration="1000" data-aos="fade-left">
-            <div class="service-card__icon">
-              <img src="{% static '/image/icons/icon-service-4.svg' %}" alt="image alt" class="inline-svg" />
-            </div>
+          <a class="service-card hvr-fill" data-aos-duration="1000" data-aos="fade-left" style="height: 100%;">
             <div class="service-card__body">
-              <h3 class="service-card__title">Посмотреть все услуги</h3>
+              <h3 class="service-card__title">Бесшовный переход с облачной версии</h3>
               <p>
-                Пакетное и проектное внедрение Битрикс24, поддержка коробочной версии, разработкаи настройка
-                интеграций с Битрикс24 и многое другое для работы вашего Бизнеса.
+                При миграции с облачного Битрикс24 сохраняются все данные, пользователи и история работы. Переход
+                происходит безопасно и без потери информации.
               </p>
-              <span class="service-card__link btn-link btn-arrow">Подробнее</span>
             </div>
           </a>
         </div>
