--- a/templates/oblako.html
+++ b/templates/oblako.html
@@ -49,26 +49,28 @@
     <div class="portfolio-details_article-body">
       <div>
         <h3><span style="font-weight: bold;">Битрикс24</span> — это единая цифровая платформа, объединяющая все
-          инструменты для эффективного управления бизнесом, командой и коммуникациями.
+          инструменты для эффективного управления бизнесом, командой и коммуникациями.<br>
           Выбирая <span style="font-weight: bold;">облачную версию</span>, вы получаете:</h3>
-        <br><br>
+        <ul class="ms-3" style="list-style: disc;">
+          <li class="pt-2"><span style="font-weight: bold;">Мгновенный старт. </span><br> Не нужно ничего устанавливать
+            или настраивать
+            — просто подключитесь к интернету и начинайте
+            работать.</li>
+          <li class="pt-2"><span style="font-weight: bold;">Доступность везде и всегда.</span> <br>Работайте через
+            браузер на
+            любом
+            устройстве: ПК, ноутбуке, планшете или смартфоне.</li>
+          <li class="pt-2"><span style="font-weight: bold;">Интеграции без сложностей.
+            </span><br>Встроенные подключения к популярным сервисам позволяют быстро объединить инструменты, которые вы
+            уже используете.</li>
+          <li class="pt-2"><span style="font-weight: bold;">Экономию ресурсов.
+            </span><br>Данные хранятся на защищённых серверах 1С-Битрикс, что избавляет от затрат на собственное
+            оборудование и IT-поддержку.</li>
+          <li class="pt-2"><span style="font-weight: bold;">Безопасность и надёжность.
+            </span><br>Все данные шифруются и доступны только вашему бизнесу.</li>
+        </ul>
 
-        <p><span style="font-weight: bold;">Мгновенный старт. </span><br> Не нужно ничего устанавливать или настраивать
-          — просто подключитесь к интернету и начинайте
-          работать.
-          <br><br><span style="font-weight: bold;">Доступность везде и всегда.</span> <br>Работайте через браузер на
-          любом
-          устройстве: ПК, ноутбуке, планшете или смартфоне.
-          <br><br><span style="font-weight: bold;">Безопасность и надёжность.
-          </span><br>Все данные шифруются и доступны только вашему бизнесу.
-          <span style="font-weight: bold;">Интеграции без сложностей.
-          </span><br>Встроенные подключения к популярным сервисам позволяют быстро объединить инструменты, которые вы
-          уже используете.
-          <br><br><span style="font-weight: bold;">Экономию ресурсов.
-          </span><br>Данные хранятся на защищённых серверах 1С-Битрикс, что избавляет от затрат на собственное
-          оборудование и IT-поддержку.
-          <br><br><span style="font-weight: bold;">Безопасность и надёжность.
-          </span><br>Все данные шифруются и доступны только вашему бизнесу.<br>
+        <p>С облачным Битрикс24 ваш бизнес работает быстрее, безопаснее и гибче.<br>
         </p>
       </div>
     </div>
