--- a/templates/prodlenie.html
+++ b/templates/prodlenie.html
@@ -48,18 +48,26 @@
 
     <div class="portfolio-details_article-body">
       <div>
-        <h2>Эффективная система мотивации сотрудников</h2>
-        <p><span style="font-weight: bold;">Внедрение BI-инструментов:
-          </span><br>Была внедрена система BI, которая позволила собирать и анализировать данные о работе
-          сотрудников.<br>Были разработаны отчеты, которые отображают конверсию лидов в сделки, эффективность работы
-          каждого сотрудника, объем выполненных работ и т.д.
-          <br><br><span style="font-weight: bold;">Автоматизация системы мотивации:
-          </span><br>Мотивация сотрудников была напрямую связана с их результатами работы.
-          <br>Была введена система поощрения лучших сотрудников.
-          <br><br><span style="font-weight: bold;">Автоматизация работы колл-центра:
-          </span><br>В колл-центре компании используются BI-инструменты для оптимизации работы сотрудников. Сотрудникам
-          колл-центра поставлены KPI (Key Performance Indicators) по конверсии лидов в сделки, количеству звонков в день
-          и другим показателям.<br>
+        <h3><span style="font-weight: bold;">Продление лицензии Битрикс24
+          </span></h3>
+
+        <p>Используя <span style="font-weight: bold;">Битрикс24</span>, вы получаете полный доступ к возможностям
+          платформы на протяжении года. После этого
+          необходимо продлить лицензию, чтобы сохранить функционал и обновления.
+        </p>
+
+        <p><span style="font-weight: bold;">Продление облачной версии:</span><br>
+          Просто оплатите выбранный тариф — не нужно сервера, системного администратора или технических хлопот. Все
+          данные и обновления хранятся на серверах 1С-Битрикс, где обеспечиваются безопасность и техническая
+          поддержка.<br>
+          Если срок тарифа закончится, портал перейдёт на бесплатный режим с ограниченными функциями. Поэтому важно
+          продлевать лицензию своевременно, чтобы не потерять доступ к нужным инструментам.
+        </p>
+
+        <p><span style="font-weight: bold;">Продление коробочной версии:</span><br>
+          Коробочная лицензия приобретается один раз, а подписка на обновления действует 12 месяцев. По истечении этого
+          срока для получения новых обновлений и поддержки необходимо продлить подписку. Без продления система продолжит
+          работать, но доступ к обновлениям и части функций будет закрыт.
         </p>
       </div>
     </div>
@@ -80,71 +88,56 @@
         <div class="col-md-9">
           <div class="section-heading text-center">
             <h2 class="section-heading__title heading-md text-black">
-              Уже используете Битрикс24? <br /> Тогда вам может быть интересно это:
+              Возможности платных лицензий Битрикс24:
             </h2>
           </div>
         </div>
       </div>
-      <div class="row gutter-y-default justify-content-center">
+      <div class="row gutter-y-default justify-content-center" style="align-items: stretch;">
         <div class="col-xl-6 col-lg-6 col-md-10">
-          <a href="service-details.html" class="service-card hvr-fill" data-aos-duration="1000" data-aos="fade-right">
-            <div class="service-card__icon">
-              <img src="{% static '/image/icons/icon-service-1.svg' %}" alt="image alt" class="inline-svg" />
-            </div>
+          <a class="service-card hvr-fill" data-aos-duration="1000" data-aos="fade-right" style="height: 100%;">
             <div class="service-card__body">
               <h3 class="service-card__title">
-                Продление лицензии Битрикс24
+                Доступ к новым модулям и функциям сразу после релиза
               </h3>
               <p>
-                Продлевайте лицензию с Правильными Интеграторами, чтобы продолжать пользоваться привычными
-                преимуществами Битрикс24.
+                Все свежие возможности Битрикс24 становятся доступны вам сразу после их выхода.<br>Вы всегда работаете с
+                актуальной версией системы и получаете инструменты, которые помогают бизнесу расти.
               </p>
-              <span class="service-card__link btn-link btn-arrow">Подробнее</span>
             </div>
           </a>
         </div>
         <div class="col-xl-6 col-lg-6 col-md-10">
-          <a href="service-details.html" class="service-card hvr-fill" data-aos-duration="1000" data-aos="fade-left">
-            <div class="service-card__icon">
-              <img src="{% static '/image/icons/icon-service-2.svg' %}" alt="image alt" class="inline-svg" />
-            </div>
+          <a class="service-card hvr-fill" data-aos-duration="1000" data-aos="fade-left" style="height: 100%;">
             <div class="service-card__body">
-              <h3 class="service-card__title">Подписка на Маркет Битрикс24</h3>
+              <h3 class="service-card__title">Регулярные обновления и оптимизация системы
+              </h3>
               <p>
-                Расширьте функционал Битрикс24 с подпиской на Маркет. Вы получите дополнительные интеграции с
-                сервисами и увеличение функционала основных инструментов.
+                Каждое обновление улучшает производительность, устраняет ошибки и делает работу платформы ещё
+                стабильнее.<br>Ваш Битрикс24 становится быстрее, удобнее и надёжнее с каждым релизом.
               </p>
-              <span class="service-card__link btn-link btn-arrow">Подробнее</span>
             </div>
           </a>
         </div>
         <div class="col-xl-6 col-lg-6 col-md-10">
-          <a href="service-details.html" class="service-card hvr-fill" data-aos-duration="1000" data-aos="fade-right">
-            <div class="service-card__icon">
-              <img src="{% static '/image/icons/icon-service-3.svg' %}" alt="image alt" class="inline-svg" />
-            </div>
+          <a class="service-card hvr-fill" data-aos-duration="1000" data-aos="fade-right" style="height: 100%;">
             <div class="service-card__body">
-              <h3 class="service-card__title">1C-Битрикс24: Enterprise</h3>
+              <h3 class="service-card__title">Обновления модуля безопасности данных</h3>
               <p>
-                Enterprise - решение для крупного бизнеса от Битрикс24.Интеграция в вашу IT-инфраструктуру, для
-                непрерывной работы портала 24/7.
+                Новые версии включают актуальные механизмы защиты, предотвращающие утечки и несанкционированный
+                доступ.<br>Ваши данные надёжно зашифрованы и соответствуют современным стандартам безопасности.
               </p>
-              <span class="service-card__link btn-link btn-arrow">Подробнее</span>
             </div>
           </a>
         </div>
         <div class="col-xl-6 col-lg-6 col-md-10">
-          <a href="service-details.html" class="service-card hvr-fill" data-aos-duration="1000" data-aos="fade-left">
-            <div class="service-card__icon">
-              <img src="{% static '/image/icons/icon-service-4.svg' %}" alt="image alt" class="inline-svg" />
-            </div>
+          <a class="service-card hvr-fill" data-aos-duration="1000" data-aos="fade-left" style="height: 100%;">
             <div class="service-card__body">
-              <h3 class="service-card__title">Посмотреть все услуги</h3>
+              <h3 class="service-card__title">Круглосуточная техническая поддержка от специалистов Битрикс24</h3>
               <p>
-                Пакетное и проектное внедрение Битрикс24, поддержка коробочной версии, разработкаи настройка
-                интеграций с Битрикс24 и многое другое для работы вашего Бизнеса.
+                Команда профессионалов всегда готова помочь с настройкой, обновлением или решением технических
+                вопросов.<br>Вы получаете стабильную работу системы и оперативную помощь при любых обращениях.
               </p>
-              <span class="service-card__link btn-link btn-arrow">Подробнее</span>
             </div>
           </a>
         </div>
