--- a/templates/market.html
+++ b/templates/market.html
@@ -143,6 +143,174 @@
 </div>
 
 
+<div class="section-padding-120">
+  <div class="container">
+    <h2 class="content-title heading-md text-black text-center">
+      Подписка Битрикс24.Маркет Плюс
+    </h2>
+    <div class="text-center">
+      <div class="home-9_pricing-control-block price" bis_skin_checked="1">
+        <div class="pricing-control-3" bis_skin_checked="1">
+          <span data-pricing-trigger="pricing-1" data-target="monthly" class="active">Для облачных решений</span>
+          <span data-pricing-trigger="pricing-1" data-target="yearly"
+            class="pricing-control-3__indicator indicator-white toggle"></span>
+          <span data-pricing-trigger="pricing-1" data-target="yearly" class="">Для коробочных решений</span>
+        </div>
+      </div>
+    </div>
+    <div class="plans-3m mt-5" data-plan-id="pricing-1" data-plan-active="monthly" style="display: grid !important;">
+      <div class="plan plan--lemon">
+        <div class="plan__header p-3 text-center">
+          <div class="service-card__title mt-2 dynamic-value" data-yearly="Интернет-магазин+CRM" data-monthly="Базовый">
+            Базовый</div>
+          <div>
+            <b>Более 3000 приложений</b>
+          </div>
+        </div>
+        <div class="plan__content p-4 d-flex flex-column justify-content-between">
+          <div>
+            <div class="text-center p-2">
+              <div class="service-card__title mt-2 dynamic-value" data-yearly="2089,20 BYN" data-monthly="44,40 BYN">
+                44,40
+                BYN</div>
+              <div class="mt-2 dynamic-value" data-yearly="подписка 12 месяцев" data-monthly="подписка 1 месяц">
+                подписка 1 месяц
+              </div>
+              <a href="#" class="btn-masco btn-masco--header rounded-pill btn-fill--up mt-4">
+                <span>Купить</span>
+              </a>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="plan plan--cyan">
+        <div class="plan__header p-3 text-center">
+          <div class="service-card__title mt-2 dynamic-value" data-yearly="Корпоративный портал-50"
+            data-monthly="Cтандартный">
+            Cтандартный</div>
+          <div>
+            <b>Более 3000 приложений</b>
+          </div>
+        </div>
+        <div class="plan__content p-4 d-flex flex-column justify-content-between">
+          <div>
+            <div class="text-center p-2">
+              <div class="service-card__title mt-2 dynamic-value" data-yearly="2932,80 BYN" data-monthly="105,60 BYN">
+                105,60 BYN</div>
+              <div class="mt-2 dynamic-value" data-yearly="подписка 12 месяцев" data-monthly="подписка 1 месяц">
+                подписка 1 месяц
+              </div>
+              <a href="#" class="btn-masco btn-masco--header rounded-pill btn-fill--up mt-4">
+                <span>Купить</span>
+              </a>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="plan plan--cyan">
+        <div class="plan__header p-3 text-center">
+          <div class="service-card__title mt-2 dynamic-value" data-yearly="Корпоративный портал-100"
+            data-monthly="Профессиональный">
+            Профессиональный</div>
+          <div>
+            <b>Более 3000 приложений</b>
+          </div>
+        </div>
+        <div class="plan__content p-4 d-flex flex-column justify-content-between">
+          <div>
+            <div class="text-center p-2">
+              <div class="service-card__title mt-2 dynamic-value" data-yearly="4197,60 BYN" data-monthly="211,20 BYN">
+                211,20 BYN</div>
+              <div class="mt-2 dynamic-value" data-yearly="подписка 12 месяцев" data-monthly="подписка 1 месяц">
+                подписка 1 месяц
+              </div>
+              <a href="#" class="btn-masco btn-masco--header rounded-pill btn-fill--up mt-4">
+                <span>Купить</span>
+              </a>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <div class="plans-3m mt-5" data-plan-id="pricing-1" data-plan-active="monthly" style="display: grid !important;">
+      <div class="plan plan--lemon">
+        <div class="plan__header p-3 text-center">
+          <div class="service-card__title mt-2 dynamic-value" data-yearly="Корпоративный портал-250"
+            data-monthly="Базовый">
+            Базовый</div>
+          <div>
+            <b>Более 3000 приложений</b>
+          </div>
+        </div>
+        <div class="plan__content p-4 d-flex flex-column justify-content-between">
+          <div>
+            <div class="text-center p-2">
+              <div class="service-card__title mt-2 dynamic-value" data-yearly="4197,60 BYN" data-monthly="420 BYN">
+                420 BYN
+                BYN</div>
+              <div class="mt-2 dynamic-value" data-yearly="подписка 12 месяцев" data-monthly="подписка 12 месяцев">
+                подписка 12 месяцев
+              </div>
+              <a href="#" class="btn-masco btn-masco--header rounded-pill btn-fill--up mt-4">
+                <span>Купить</span>
+              </a>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="plan plan--cyan">
+        <div class="plan__header p-3 text-center">
+          <div class="service-card__title mt-2 dynamic-value" data-yearly="Корпоративный портал-500"
+            data-monthly="Cтандартный">
+            Cтандартный</div>
+          <div>
+            <b>Более 3000 приложений</b>
+          </div>
+        </div>
+        <div class="plan__content p-4 d-flex flex-column justify-content-between">
+          <div>
+            <div class="text-center p-2">
+              <div class="service-card__title mt-2 dynamic-value" data-yearly="4197,60 BYN" data-monthly="1010,40 BYN">
+                1010,40 BYN</div>
+              <div class="mt-2 dynamic-value" data-yearly="подписка 12 месяцев" data-monthly="подписка 12 месяцев">
+                подписка 12 месяцев
+              </div>
+              <a href="#" class="btn-masco btn-masco--header rounded-pill btn-fill--up mt-4">
+                <span>Купить</span>
+              </a>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="plan plan--cyan">
+        <div class="plan__header p-3 text-center">
+          <div class="service-card__title mt-2 dynamic-value" data-yearly="Энтерпрайз" data-monthly="Профессиональный">
+            Профессиональный</div>
+          <div>
+            <b>Более 3000 приложений</b>
+          </div>
+        </div>
+        <div class="plan__content p-4 d-flex flex-column justify-content-between">
+          <div>
+            <div class="text-center p-2">
+              <div class="service-card__title mt-2 dynamic-value" data-yearly="4197,60 BYN" data-monthly="2023,20 BYN">
+                2023,20 BYN</div>
+              <div class="mt-2 dynamic-value" data-yearly="подписка 12 месяцев" data-monthly="подписка 12 месяцев">
+                подписка 12 месяцев
+              </div>
+              <a href="#" class="btn-masco btn-masco--header rounded-pill btn-fill--up mt-4">
+                <span>Купить</span>
+              </a>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+
+
 <div class="about_feature-section section-padding-120 bg-light-2">
   <div class="container">
     <div class="row justify-content-center text-center">
@@ -255,6 +423,34 @@
   </div>
 </div>
 
+<!-- ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
+    Home 8  : Contact Section 
+~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ -->
+
+<div class="cta-home-8 pt-5 pb-5" bis_skin_checked="1">
+  <div class="container" bis_skin_checked="1">
+    <div class="cta-home-8-wrapper" bis_skin_checked="1">
+      <div class="cta-home-8-shape-wrapper" bis_skin_checked="1">
+        <div class="cta-home-8-shape" bis_skin_checked="1">
+          <img src="{% static '/image/cta/cta-8-shape.png' %}" alt="image alt">
+        </div>
+      </div>
+      <div class="cta-content-block" bis_skin_checked="1">
+        <div class="cta-text-block" bis_skin_checked="1">
+          <h2 class="cta-title heading-md text-cream">АКТИВИРУЙТЕ БЕСПЛАТНЫЙ 15-ДНЕВНЫЙ ПРОБНЫЙ ПЕРИОД,</h2>
+          <p>
+            чтобы лично протестировать все возможности платформы
+          </p>
+        </div>
+        <div class="cta-button-group" bis_skin_checked="1">
+          <a class="btn-masco btn-primary-l08 btn-fill--up rounded-pill" href="#">
+            <span>Оставить завку</span>
+          </a>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
 
 <!-- ~~~~~~~~~~~~~~~~~~~~~~~~~~
     Home 1 : Portfolio Section
