fix: correct vnedrenie paketnoe

--- a/templates/vnedreniepaket.html
+++ b/templates/vnedreniepaket.html
@@ -391,7 +391,7 @@
         <div class="col-xxl-6 col-xl-7 col-lg-8 col-md-9">
           <div class="section-heading text-center">
             <h2 class="section-heading__title heading-md text-black">
-              Решения, которые мы предлагаем
+              Этапы сотрудничества<br/>при Пакетном внедрении Битрикс24
             </h2>
           </div>
         </div>
@@ -686,7 +686,7 @@
       </div>
       <div class="cta-content-block" bis_skin_checked="1">
         <div class="cta-text-block" bis_skin_checked="1">
-          <h2 class="cta-title heading-md text-cream">Опишите свою проблему, и мы найдем для нее решение</h2>
+          <h2 class="heading-md text-cream">Опишите свою проблему, и мы найдем для нее решение</h2>
           <p>
             Заполните форму и мы свяжемся с вами для проведения бесплатной консультации
           </p>
