feat: add vnedrenie proektnoe full

--- a/bitrixsite/static/scss/helpers/overrides/_grids.scss
+++ b/bitrixsite/static/scss/helpers/overrides/_grids.scss
@@ -1170,7 +1170,7 @@
    }
    .col-xxl-5 {
      flex: 0 0 auto;
-     width: 41.66666667%;
+     width: 43%;
    }
    .col-xxl-6 {
      flex: 0 0 auto;
