--- a/staticfiles/css/style.css
+++ b/staticfiles/css/style.css
@@ -1315,7 +1315,7 @@ p {
   }
   .col-xxl-5 {
     flex: 0 0 auto;
-    width: 41.66666667%;
+    width: 43%;
   }
   .col-xxl-6 {
     flex: 0 0 auto;
