--- a/bitrixsite/static/scss/components/widgets/_feature.scss
+++ b/bitrixsite/static/scss/components/widgets/_feature.scss
@@ -172,6 +172,17 @@
     row-gap: 15px;
     flex-direction: column;
     padding: 20px;
+    align-items: center;
+    justify-content: center;
+
+    &__body {
+      text-align: center;
+
+      img {
+        margin: 0 auto;
+      }
+    }
+
     @media (min-width:480px){
       padding: 30px;
       flex-direction: row;
@@ -196,7 +207,8 @@
     &__title {
       @include heading-24(500,0.04166666em);
       font-family: 'Clash Display', sans-serif; 
-      margin-bottom: 15px;
+      margin: 15px 0;
+      color: #0d6efd;
     }
   
     p {
